--- a/coincidenceInterface.ipynb
+++ b/coincidenceInterface.ipynb
@@ -15,6 +15,9 @@
     "\n",
     "import time\n",
     "\n",
+    "\n",
+    "# THIS IS A CHANGE\n",
+    "\n",
     "useSerial = False\n",
     "\n",
     "# Set up the CD48 board\n",
