--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -17,6 +17,8 @@
     "import time\n",
     "import serial\n",
     "\n",
+    "# hello scientists\n",
+    "\n",
     "# Estalish a connection with the CD48 board\n",
     "s = serial.Serial('/dev/cu.usbmodem14101',baudrate=250000, timeout = 1) # open serial port; port name will \n",
     "                                                            # have to be changed on different computers\n",
