--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -281,9 +281,9 @@
     "coincidenceCountsAB = [0]\n",
     "\n",
     "# Set the source of data for our plot\n",
-    "sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
-    "sourceB = ColumnDataSource(data=dict(timeList=timeList, singleCountsB=singleCountsB))\n",
-    "sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
+    "#sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
+    "#sourceB = ColumnDataSource(data=dict(timeList=timeList, singleCountsB=singleCountsB))\n",
+    "#sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
     "\n",
     "# Set up our 3 plots\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
@@ -296,9 +296,9 @@
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
     "# Make each point of the plot a circle\n",
-    "singleCountsAPlot.circle('timeList', 'singleCountsA', source=sourceA, line_width=3, line_alpha=0.6)\n",
-    "singleCountsBPlot.circle('timeList', 'singleCountsB', source=sourceB, line_width=3, line_alpha=0.6)\n",
-    "coincidenceCountsABPlot.circle('timeList', 'coincidenceCountsAB', source=sourceAB, line_width=3, line_alpha=0.6)\n",
+    "singleCountsAPlot.circle(timeList, singleCountsA, line_width=3, line_alpha=0.6)\n",
+    "singleCountsBPlot.circle(timeList, singleCountsB, line_width=3, line_alpha=0.6)\n",
+    "coincidenceCountsABPlot.circle(timeList, coincidenceCountsAB, line_width=3, line_alpha=0.6)\n",
     "\n",
     "\n",
     "# Set up START/STOP button\n",
@@ -344,14 +344,16 @@
     "        coincidenceCountsAB.append(np.random.randint(0, countingTime))\n",
     "        \n",
     "    # Set the data source\n",
-    "    sourceA.data = dict(timeList=timeList, singleCountsA=singleCountsA)\n",
-    "    sourceB.data = data=dict(timeList=timeList, singleCountsB=singleCountsB)\n",
-    "    sourceAB.data = data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB)\n",
+    "    #sourceA.data = dict(timeList=timeList, singleCountsA=singleCountsA)\n",
+    "    #sourceB.data = dict(timeList=timeList, singleCountsB=singleCountsB)\n",
+    "    #sourceAB.data = dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB)\n",
     "    \n",
     "    # Set up the graph to start scrolling when x_range is filled\n",
     "    # The plot will display the most recent 10 points, \n",
     "    # but you can manually scroll the graph back to see earlier data points.\n",
     "    # No longer works after dragging the graph. Need to figure out a solution\n",
+    "    \n",
+    "    '''\n",
     "    singleCountsAPlot.x_range.follow = \"end\"\n",
     "    singleCountsAPlot.x_range.follow_interval = countingTime*10\n",
     "    \n",
@@ -360,8 +362,10 @@
     "    \n",
     "    coincidenceCountsABPlot.x_range.follow = \"end\"\n",
     "    coincidenceCountsABPlot.x_range.follow_interval = countingTime*10\n",
+    "    '''\n",
     "    \n",
     "    \n",
+    "    '''\n",
     "    # Make each point of the plot a circle\n",
     "    singleCountsAPlot.circle('timeList', 'singleCountsA', source=sourceA, line_width=3, line_alpha=0.6)\n",
     "    singleCountsBPlot.circle('timeList', 'singleCountsB', source=sourceB, line_width=3, line_alpha=0.6)\n",
@@ -374,11 +378,13 @@
     "    coincidenceCountsABPlot.line('timeList', 'coincidenceCountsAB', source=sourceAB, \n",
     "                                 line_width=3, line_alpha=0.6)\n",
     "    \n",
+    "    '''\n",
     "    \n",
     "    # Update the average count in the text box\n",
     "    averageValueText[0].text = \"Plot 1 Average Counts: %d \" % (np.mean(singleCountsA))\n",
     "    averageValueText[1].text = \"Plot 2 Average Counts: %d \" % (np.mean(singleCountsB))\n",
     "    averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -416,15 +422,14 @@
     "    coincidenceCountsAB = [0]\n",
     "\n",
     "    # Set the source of data for our plot\n",
-    "    sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
-    "    sourceB = ColumnDataSource(data=dict(timeList=timeList, singleCountsB=singleCountsB))\n",
-    "    sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
+    "    #sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
+    "    #sourceB = ColumnDataSource(data=dict(timeList=timeList, singleCountsB=singleCountsB))\n",
+    "    #sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
     "    \n",
     "    # Make each point of the plot a circle\n",
-    "    singleCountsAPlot.circle('timeList', 'singleCountsA', source=sourceA, line_width=3, line_alpha=0.6)\n",
-    "    singleCountsBPlot.circle('timeList', 'singleCountsB', source=sourceB, line_width=3, line_alpha=0.6)\n",
-    "    coincidenceCountsABPlot.circle('timeList', 'coincidenceCountsAB', source=sourceAB, \n",
-    "                                   line_width=3, line_alpha=0.6)\n",
+    "    singleCountsAPlot.circle(timeList, singleCountsA, line_width=3, line_alpha=0.6)\n",
+    "    singleCountsBPlot.circle(timeList, singleCountsB, line_width=3, line_alpha=0.6)\n",
+    "    coincidenceCountsABPlot.circle(timeList, coincidenceCountsAB, line_width=3, line_alpha=0.6)\n",
     "\n",
     "    \n",
     "    \n",
@@ -447,11 +452,13 @@
     "\n",
     "setCountersLayout = layout([[counterInterface]], sizing_mode='scale_both')\n",
     "\n",
-    "displayCountsLayout = layout([[row([userInputWidgets, \n",
-    "                                    column([singleCountsAPlot, \n",
-    "                                            singleCountsBPlot, \n",
-    "                                            coincidenceCountsABPlot])\n",
-    "                                            ])]] , sizing_mode='scale_both')\n",
+    "plotsColumn = column([singleCountsAPlot, \n",
+    "                      singleCountsBPlot, \n",
+    "                      coincidenceCountsABPlot\n",
+    "                     ])\n",
+    "\n",
+    "\n",
+    "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn])]] , sizing_mode='scale_both')\n",
     "\n",
     "setCountersTab = Panel(child = setCountersLayout, \n",
     "                       title=\"Set Counters\")\n",
