changed to streaming data

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,8 @@
     "from bokeh.models import PreText, CheckboxGroup, Paragraph\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.models.widgets import Tabs, Panel\n",
+    "\n",
+    "from bokeh.driving import count\n",
     "\n",
     "import time\n",
     "import serial\n",
@@ -275,10 +277,14 @@
     "    #s.write(\"S01100\\n\".encode()) \n",
     "\n",
     "# Initialize the data lists, time is the same for all three plots\n",
-    "timeList = [0]\n",
-    "singleCountsA = [0]\n",
-    "singleCountsB = [0]\n",
-    "coincidenceCountsAB = [0]\n",
+    "\n",
+    "\n",
+    "source = ColumnDataSource(dict(\n",
+    "    timeList=[], \n",
+    "    singleCountsA=[], \n",
+    "    singleCountsB=[], \n",
+    "    coincidenceCountsAB=[]\n",
+    "    ))\n",
     "\n",
     "# Set the source of data for our plot\n",
     "#sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
@@ -295,39 +301,92 @@
     "coincidenceCountsABPlot = figure(plot_height=200, plot_width=600, title=\"Coincidence Counts on Ports A and B\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
-    "# Make each point of the plot a circle\n",
-    "singleCountsAPlot.circle(timeList, singleCountsA, line_width=3, line_alpha=0.6)\n",
-    "singleCountsBPlot.circle(timeList, singleCountsB, line_width=3, line_alpha=0.6)\n",
-    "coincidenceCountsABPlot.circle(timeList, coincidenceCountsAB, line_width=3, line_alpha=0.6)\n",
-    "\n",
-    "\n",
-    "# Set up START/STOP button\n",
-    "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1)\n",
     "\n",
     "# Set up slider for user to choose counting time\n",
     "countingTimeSlider = Slider(start=100, end=1000, value=1000, step=1, title=\"Counting Time (ms)\")\n",
     "countingTime = countingTimeSlider.value # initialize the variable to store the counting interval\n",
     "\n",
+    "\n",
+    "numberPointsDisplayed = 20\n",
+    "\n",
+    "singleCountsAPlot.x_range.follow = \"end\"\n",
+    "singleCountsAPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "    \n",
+    "singleCountsBPlot.x_range.follow = \"end\"\n",
+    "singleCountsBPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "    \n",
+    "coincidenceCountsABPlot.x_range.follow = \"end\"\n",
+    "coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "\n",
+    "# Make each point of the plot a circle\n",
+    "singleCountsAPlot.circle(x = 'timeList', y = 'singleCountsA', source = source, line_width=3, line_alpha=0.6)\n",
+    "singleCountsBPlot.circle(x = 'timeList', y = 'singleCountsB', source = source, line_width=3, line_alpha=0.6)\n",
+    "coincidenceCountsABPlot.circle(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
+    "                               line_width=3, line_alpha=0.6)\n",
+    "\n",
+    "singleCountsAPlot.line(x = 'timeList', y = 'singleCountsA', source = source, line_width=2, line_alpha=0.6)\n",
+    "singleCountsBPlot.line(x = 'timeList', y = 'singleCountsB', source = source, line_width=2, line_alpha=0.6)\n",
+    "coincidenceCountsABPlot.line(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
+    "                               line_width=2, line_alpha=0.6)\n",
+    "\n",
+    "\n",
+    "# Set up START/STOP button\n",
+    "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1)\n",
+    "\n",
+    "\n",
+    "\n",
     "# Set up the reset button\n",
     "resetGraphButton = Button(label=\"Reset\")\n",
     "\n",
     "# Set up time average value text box\n",
-    "averageValueText = []\n",
+    "#averageValueText = []\n",
     "\n",
-    "for i in np.arange(3):\n",
-    "    averageValueText.append(Paragraph(text=\"Plot \" + str(i) + \" Average: 0\", width=400, height=40))\n",
+    "#for i in np.arange(3):\n",
+    "#    averageValueText.append(Paragraph(text=\"Plot \" + str(i) + \" Average: 0\", width=400, height=40))\n",
     "\n",
+    "    \n",
+    "    \n",
+    "''' \n",
+    "def _create_new_data(t):\n",
+    "    \n",
+    "    countingTime = countingTimeSlider.value\n",
+    "    \n",
+    "    timeList = \n",
+    "    \n",
+    "    last_average = 100 if t==0 else source.data['average'][-1]\n",
+    "    returns = np.asarray(np.random.lognormal(mean.value, stddev.value, 1))\n",
+    "    average =  last_average * np.cumprod(returns)\n",
+    "    high = average * np.exp(abs(np.random.gamma(1, 0.03, size=1)))\n",
+    "    low = average / np.exp(abs(np.random.gamma(1, 0.03, size=1)))\n",
+    "    delta = high - low\n",
+    "    open = low + delta * np.random.uniform(0.05, 0.95, size=1)\n",
+    "    close = low + delta * np.random.uniform(0.05, 0.95, size=1)\n",
+    "    \n",
+    "    return open[0], high[0], low[0], close[0], average[0]\n",
     "\n",
+    "''' \n",
     "\n",
+    "runningTime = 0\n",
+    "\n",
+    "#@count()\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "def update_data():\n",
     "    \n",
     "    countingTime = countingTimeSlider.value\n",
     "    \n",
-    "    # Generate the new curve\n",
-    "    # Append a new t value (based on the value of the interval slider) to list t\n",
-    "    timeList.append(timeList[-1] + countingTime)\n",
+    "    global runningTime\n",
     "    \n",
+    "    runningTime = runningTime + countingTime\n",
+    "    \n",
+    "    new_data = dict(\n",
+    "        timeList=[runningTime],\n",
+    "        singleCountsA=[np.random.randint(0, countingTime)],\n",
+    "        singleCountsB=[np.random.randint(0, countingTime)],\n",
+    "        coincidenceCountsAB=[np.random.randint(0, countingTime)]\n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
     "    # Append the most recently received count to list n\n",
     "    if useSerial:\n",
     "        # Request data from the CD48 counter\n",
@@ -343,49 +402,15 @@
     "        singleCountsB.append(np.random.randint(0, countingTime))\n",
     "        coincidenceCountsAB.append(np.random.randint(0, countingTime))\n",
     "        \n",
-    "    # Set the data source\n",
-    "    #sourceA.data = dict(timeList=timeList, singleCountsA=singleCountsA)\n",
-    "    #sourceB.data = dict(timeList=timeList, singleCountsB=singleCountsB)\n",
-    "    #sourceAB.data = dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB)\n",
+    "'''\n",
     "    \n",
-    "    # Set up the graph to start scrolling when x_range is filled\n",
-    "    # The plot will display the most recent 10 points, \n",
-    "    # but you can manually scroll the graph back to see earlier data points.\n",
-    "    # No longer works after dragging the graph. Need to figure out a solution\n",
-    "    \n",
-    "    '''\n",
-    "    singleCountsAPlot.x_range.follow = \"end\"\n",
-    "    singleCountsAPlot.x_range.follow_interval = countingTime*10\n",
-    "    \n",
-    "    singleCountsBPlot.x_range.follow = \"end\"\n",
-    "    singleCountsBPlot.x_range.follow_interval = countingTime*10\n",
-    "    \n",
-    "    coincidenceCountsABPlot.x_range.follow = \"end\"\n",
-    "    coincidenceCountsABPlot.x_range.follow_interval = countingTime*10\n",
-    "    '''\n",
-    "    \n",
-    "    \n",
-    "    '''\n",
-    "    # Make each point of the plot a circle\n",
-    "    singleCountsAPlot.circle('timeList', 'singleCountsA', source=sourceA, line_width=3, line_alpha=0.6)\n",
-    "    singleCountsBPlot.circle('timeList', 'singleCountsB', source=sourceB, line_width=3, line_alpha=0.6)\n",
-    "    coincidenceCountsABPlot.circle('timeList', 'coincidenceCountsAB', source=sourceAB, \n",
-    "                                   line_width=3, line_alpha=0.6)\n",
-    "    \n",
-    "    # Connect the points of the plots with a line\n",
-    "    singleCountsAPlot.line('timeList', 'singleCountsA', source=sourceA, line_width=3, line_alpha=0.6)\n",
-    "    singleCountsBPlot.line('timeList', 'singleCountsB', source=sourceB, line_width=3, line_alpha=0.6)\n",
-    "    coincidenceCountsABPlot.line('timeList', 'coincidenceCountsAB', source=sourceAB, \n",
-    "                                 line_width=3, line_alpha=0.6)\n",
-    "    \n",
-    "    '''\n",
     "    \n",
     "    # Update the average count in the text box\n",
-    "    averageValueText[0].text = \"Plot 1 Average Counts: %d \" % (np.mean(singleCountsA))\n",
-    "    averageValueText[1].text = \"Plot 2 Average Counts: %d \" % (np.mean(singleCountsB))\n",
-    "    averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
+    "    #averageValueText[0].text = \"Plot 1 Average Counts: %d \" % (np.mean(singleCountsA))\n",
+    "    #averageValueText[1].text = \"Plot 2 Average Counts: %d \" % (np.mean(singleCountsB))\n",
+    "    #averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
     "    \n",
-    "\n",
+    "    source.stream(new_data)\n",
     "\n",
     "\n",
     "\n",
@@ -411,7 +436,7 @@
     "        # Remove the periodic callback\n",
     "        curdoc().remove_periodic_callback(callback_id)\n",
     "        \n",
-    "    \n",
+    "'''    \n",
     "# Define a function to be called when the reset button is clicked\n",
     "def reset_plot():\n",
     "    # Change the lists t and n back to [0]\n",
@@ -420,6 +445,21 @@
     "    singleCountsA = [0]\n",
     "    singleCountsB = [0]\n",
     "    coincidenceCountsAB = [0]\n",
+    "    \n",
+    "    source = ColumnDataSource(dict(\n",
+    "    timeList=[], \n",
+    "    singleCountsA=[], \n",
+    "    singleCountsB=[], \n",
+    "    coincidenceCountsAB=[]\n",
+    "    ))\n",
+    "    \n",
+    "'''\n",
+    "    \n",
+    "def reset_plot():\n",
+    "    global runningTime\n",
+    "    runningTime = 0\n",
+    "    \n",
+    "    source.data = {k: [] for k in source.data}\n",
     "\n",
     "    # Set the source of data for our plot\n",
     "    #sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
@@ -427,9 +467,9 @@
     "    #sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
     "    \n",
     "    # Make each point of the plot a circle\n",
-    "    singleCountsAPlot.circle(timeList, singleCountsA, line_width=3, line_alpha=0.6)\n",
-    "    singleCountsBPlot.circle(timeList, singleCountsB, line_width=3, line_alpha=0.6)\n",
-    "    coincidenceCountsABPlot.circle(timeList, coincidenceCountsAB, line_width=3, line_alpha=0.6)\n",
+    "    #singleCountsAPlot.circle(timeList, singleCountsA, line_width=3, line_alpha=0.6)\n",
+    "    #singleCountsBPlot.circle(timeList, singleCountsB, line_width=3, line_alpha=0.6)\n",
+    "    #coincidenceCountsABPlot.circle(timeList, coincidenceCountsAB, line_width=3, line_alpha=0.6)\n",
     "\n",
     "    \n",
     "    \n",
@@ -443,10 +483,11 @@
     "# Set up layouts and add to document\n",
     "userInputWidgets = column(startStopButtonGroup, \n",
     "                          countingTimeSlider, \n",
-    "                          resetGraphButton, \n",
-    "                          averageValueText[0],\n",
-    "                          averageValueText[1],\n",
-    "                          averageValueText[2])\n",
+    "                          resetGraphButton#, \n",
+    "                          #averageValueText[0],\n",
+    "                          #averageValueText[1],\n",
+    "                          #averageValueText[2]\n",
+    "                         )\n",
     "\n",
     "\n",
     "\n",
