--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -266,7 +266,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "# This portion of the code is for the Three Graphs\n",
     "\n",
     "\n",
     "useSerial = False\n",
@@ -276,8 +276,10 @@
     "    s = serial.Serial('/dev/cu.usbmodem14101',baudrate=250000) # May need to change the port number\n",
     "    #s.write(\"S01100\\n\".encode()) \n",
     "\n",
+    "    \n",
+    "    \n",
     "# Initialize the data lists, time is the same for all three plots\n",
-    "\n",
+    "# use a Column Data Source, intially all lists are empty\n",
     "\n",
     "source = ColumnDataSource(dict(\n",
     "    timeList=[], \n",
@@ -286,12 +288,8 @@
     "    coincidenceCountsAB=[]\n",
     "    ))\n",
     "\n",
-    "# Set the source of data for our plot\n",
-    "#sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
-    "#sourceB = ColumnDataSource(data=dict(timeList=timeList, singleCountsB=singleCountsB))\n",
-    "#sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
     "\n",
-    "# Set up our 3 plots\n",
+    "# Create our 3 plots\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
@@ -302,13 +300,16 @@
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
     "\n",
-    "# Set up slider for user to choose counting time\n",
+    "# Set up slider for user to choose counting time (100ms to 1000ms)\n",
     "countingTimeSlider = Slider(start=100, end=1000, value=1000, step=1, title=\"Counting Time (ms)\")\n",
     "countingTime = countingTimeSlider.value # initialize the variable to store the counting interval\n",
     "\n",
-    "\n",
+    "# How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
     "numberPointsDisplayed = 20\n",
     "\n",
+    "\n",
+    "# Make the plots display only the most recent \"numberPointsDisplayed\" points\n",
+    "# This way, the graph will scroll to show the newest points\n",
     "singleCountsAPlot.x_range.follow = \"end\"\n",
     "singleCountsAPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
     "    \n",
@@ -318,25 +319,28 @@
     "coincidenceCountsABPlot.x_range.follow = \"end\"\n",
     "coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
     "\n",
-    "# Make each point of the plot a circle\n",
+    "\n",
+    "\n",
+    "# Make each point of each plot a circle\n",
     "singleCountsAPlot.circle(x = 'timeList', y = 'singleCountsA', source = source, line_width=3, line_alpha=0.6)\n",
     "singleCountsBPlot.circle(x = 'timeList', y = 'singleCountsB', source = source, line_width=3, line_alpha=0.6)\n",
     "coincidenceCountsABPlot.circle(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
     "                               line_width=3, line_alpha=0.6)\n",
     "\n",
+    "# Connect the points of each plot with a line\n",
     "singleCountsAPlot.line(x = 'timeList', y = 'singleCountsA', source = source, line_width=2, line_alpha=0.6)\n",
     "singleCountsBPlot.line(x = 'timeList', y = 'singleCountsB', source = source, line_width=2, line_alpha=0.6)\n",
     "coincidenceCountsABPlot.line(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
     "                               line_width=2, line_alpha=0.6)\n",
     "\n",
     "\n",
-    "# Set up START/STOP button\n",
+    "# Set up START/STOP button, to start and stop counting\n",
     "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1)\n",
     "\n",
-    "\n",
-    "\n",
-    "# Set up the reset button\n",
+    "# Set up the reset button, to clear the graph of all data\n",
     "resetGraphButton = Button(label=\"Reset\")\n",
+    "\n",
+    "\n",
     "\n",
     "# Set up time average value text box\n",
     "#averageValueText = []\n",
@@ -345,39 +349,25 @@
     "#    averageValueText.append(Paragraph(text=\"Plot \" + str(i) + \" Average: 0\", width=400, height=40))\n",
     "\n",
     "    \n",
-    "    \n",
-    "''' \n",
-    "def _create_new_data(t):\n",
-    "    \n",
-    "    countingTime = countingTimeSlider.value\n",
-    "    \n",
-    "    timeList = \n",
-    "    \n",
-    "    last_average = 100 if t==0 else source.data['average'][-1]\n",
-    "    returns = np.asarray(np.random.lognormal(mean.value, stddev.value, 1))\n",
-    "    average =  last_average * np.cumprod(returns)\n",
-    "    high = average * np.exp(abs(np.random.gamma(1, 0.03, size=1)))\n",
-    "    low = average / np.exp(abs(np.random.gamma(1, 0.03, size=1)))\n",
-    "    delta = high - low\n",
-    "    open = low + delta * np.random.uniform(0.05, 0.95, size=1)\n",
-    "    close = low + delta * np.random.uniform(0.05, 0.95, size=1)\n",
-    "    \n",
-    "    return open[0], high[0], low[0], close[0], average[0]\n",
     "\n",
-    "''' \n",
-    "\n",
+    "# keep a running count of time elapsed, start at 0. This will help inform x-axis values.\n",
     "runningTime = 0\n",
     "\n",
-    "#@count()\n",
+    "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
+    "# This function appends new data to our plots through the stream data command\n",
     "def update_data():\n",
     "    \n",
+    "    # retrieve the value of desired counting time\n",
     "    countingTime = countingTimeSlider.value\n",
     "    \n",
+    "    # use the global variable\n",
     "    global runningTime\n",
     "    \n",
+    "    # add the counting time to our running time\n",
     "    runningTime = runningTime + countingTime\n",
     "    \n",
+    "    # append new data (the current time for timeList and random values for all others)\n",
     "    new_data = dict(\n",
     "        timeList=[runningTime],\n",
     "        singleCountsA=[np.random.randint(0, countingTime)],\n",
@@ -386,7 +376,7 @@
     "    )\n",
     "    \n",
     "    \n",
-    "    '''\n",
+    "'''\n",
     "    # Append the most recently received count to list n\n",
     "    if useSerial:\n",
     "        # Request data from the CD48 counter\n",
@@ -410,6 +400,8 @@
     "    #averageValueText[1].text = \"Plot 2 Average Counts: %d \" % (np.mean(singleCountsB))\n",
     "    #averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
     "    \n",
+    "    \n",
+    "    # Stream the new data to the plots.\n",
     "    source.stream(new_data)\n",
     "\n",
     "\n",
@@ -436,40 +428,16 @@
     "        # Remove the periodic callback\n",
     "        curdoc().remove_periodic_callback(callback_id)\n",
     "        \n",
-    "'''    \n",
-    "# Define a function to be called when the reset button is clicked\n",
+    "\n",
+    "# Define a function to be called when the reset button is pressed.   \n",
     "def reset_plot():\n",
-    "    # Change the lists t and n back to [0]\n",
-    "    global timeList\n",
-    "    timeList = [0]\n",
-    "    singleCountsA = [0]\n",
-    "    singleCountsB = [0]\n",
-    "    coincidenceCountsAB = [0]\n",
     "    \n",
-    "    source = ColumnDataSource(dict(\n",
-    "    timeList=[], \n",
-    "    singleCountsA=[], \n",
-    "    singleCountsB=[], \n",
-    "    coincidenceCountsAB=[]\n",
-    "    ))\n",
-    "    \n",
-    "'''\n",
-    "    \n",
-    "def reset_plot():\n",
+    "    # set the running time back to 0\n",
     "    global runningTime\n",
     "    runningTime = 0\n",
     "    \n",
+    "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
-    "\n",
-    "    # Set the source of data for our plot\n",
-    "    #sourceA = ColumnDataSource(data=dict(timeList=timeList, singleCountsA=singleCountsA))\n",
-    "    #sourceB = ColumnDataSource(data=dict(timeList=timeList, singleCountsB=singleCountsB))\n",
-    "    #sourceAB = ColumnDataSource(data=dict(timeList=timeList, coincidenceCountsAB=coincidenceCountsAB))\n",
-    "    \n",
-    "    # Make each point of the plot a circle\n",
-    "    #singleCountsAPlot.circle(timeList, singleCountsA, line_width=3, line_alpha=0.6)\n",
-    "    #singleCountsBPlot.circle(timeList, singleCountsB, line_width=3, line_alpha=0.6)\n",
-    "    #coincidenceCountsABPlot.circle(timeList, coincidenceCountsAB, line_width=3, line_alpha=0.6)\n",
     "\n",
     "    \n",
     "    \n",
@@ -481,6 +449,8 @@
     "resetGraphButton.on_click(reset_plot)\n",
     "\n",
     "# Set up layouts and add to document\n",
+    "\n",
+    "# create a column of user input widgets\n",
     "userInputWidgets = column(startStopButtonGroup, \n",
     "                          countingTimeSlider, \n",
     "                          resetGraphButton#, \n",
@@ -490,34 +460,34 @@
     "                         )\n",
     "\n",
     "\n",
-    "\n",
+    "# create a layout with the set counters interface from the first half of this code\n",
     "setCountersLayout = layout([[counterInterface]], sizing_mode='scale_both')\n",
     "\n",
+    "# create a column with our three plots\n",
     "plotsColumn = column([singleCountsAPlot, \n",
     "                      singleCountsBPlot, \n",
     "                      coincidenceCountsABPlot\n",
     "                     ])\n",
     "\n",
-    "\n",
+    "# create a layout for the graphs interface, with the input widgets and the three plots\n",
     "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn])]] , sizing_mode='scale_both')\n",
     "\n",
+    "# create a tab for the set counters interface\n",
     "setCountersTab = Panel(child = setCountersLayout, \n",
     "                       title=\"Set Counters\")\n",
     "\n",
+    "# create a tab for the graphs interface\n",
     "displayCountsTab = Panel(child = displayCountsLayout, \n",
     "                         title=\"Graphs\")\n",
     "\n",
+    "# combine all tabs into one layout\n",
     "currentDocumentTabs = Tabs(tabs=[ setCountersTab, displayCountsTab ])\n",
     "\n",
+    "\n",
+    "# Add tabs to current document\n",
     "curdoc().add_root(currentDocumentTabs)\n",
     "\n",
-    "# Add plot and widgets to current document\n",
-    "#curdoc().add_root(counter_interface)\n",
-    "curdoc().title = \"Coincidence Counting Interface\"\n",
-    "\n",
-    "# Add plot and widgets to current document\n",
-    "#curdoc().add_root(row(inputs, plot, width=1000))\n",
-    "#curdoc().title = \"coincidenceInterface\"\n"
+    "curdoc().title = \"Coincidence Counting Interface\""
    ]
   },
   {
