fixed slider bugs

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -269,11 +269,11 @@
     "# This portion of the code is for the Three Graphs\n",
     "\n",
     "\n",
-    "useSerial = False\n",
+    "useSerial = True\n",
     "\n",
     "# Set up the CD48 board\n",
-    "if useSerial:\n",
-    "    s = serial.Serial('/dev/cu.usbmodem14101',baudrate=250000) # May need to change the port number\n",
+    "#if useSerial:\n",
+    "#    s = serial.Serial('/dev/cu.usbmodem14101',baudrate=250000) # May need to change the port number\n",
     "    #s.write(\"S01100\\n\".encode()) \n",
     "\n",
     "    \n",
@@ -301,7 +301,7 @@
     "\n",
     "\n",
     "# Set up slider for user to choose counting time (100ms to 1000ms)\n",
-    "countingTimeSlider = Slider(start=100, end=1000, value=1000, step=1, title=\"Counting Time (ms)\")\n",
+    "countingTimeSlider = Slider(start=100, end=1000, value=1000, step=10, title=\"Counting Time (ms)\")\n",
     "countingTime = countingTimeSlider.value # initialize the variable to store the counting interval\n",
     "\n",
     "# How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
@@ -361,22 +361,41 @@
     "    # retrieve the value of desired counting time\n",
     "    countingTime = countingTimeSlider.value\n",
     "    \n",
+    "\n",
+    "    \n",
     "    # use the global variable\n",
     "    global runningTime\n",
     "    \n",
     "    # add the counting time to our running time\n",
     "    runningTime = runningTime + countingTime\n",
     "    \n",
-    "    # append new data (the current time for timeList and random values for all others)\n",
-    "    new_data = dict(\n",
-    "        timeList=[runningTime],\n",
-    "        singleCountsA=[np.random.randint(0, countingTime)],\n",
-    "        singleCountsB=[np.random.randint(0, countingTime)],\n",
-    "        coincidenceCountsAB=[np.random.randint(0, countingTime)]\n",
-    "    )\n",
     "    \n",
     "    \n",
-    "'''\n",
+    "    if useSerial:\n",
+    "        # Request data from the CD48 counter\n",
+    "        s.write(\"c\\n\".encode())\n",
+    "        serialData = s.readline()\n",
+    "        counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
+    "        \n",
+    "        new_data = dict(\n",
+    "            timeList=[runningTime],\n",
+    "            singleCountsA=[counterData[0]],\n",
+    "            singleCountsB=[counterData[1]],\n",
+    "            coincidenceCountsAB=[counterData[2]]\n",
+    "        )\n",
+    "    else:\n",
+    "        # append new data (the current time for timeList and random values for all others)\n",
+    "        new_data = dict(\n",
+    "            timeList=[runningTime],\n",
+    "            singleCountsA=[np.random.randint(0, countingTime)],\n",
+    "            singleCountsB=[np.random.randint(0, countingTime)],\n",
+    "            coincidenceCountsAB=[np.random.randint(0, countingTime)]\n",
+    "        )\n",
+    "    \n",
+    "    # Stream the new data to the plots.\n",
+    "    source.stream(new_data)\n",
+    "    \n",
+    "    '''\n",
     "    # Append the most recently received count to list n\n",
     "    if useSerial:\n",
     "        # Request data from the CD48 counter\n",
@@ -392,7 +411,7 @@
     "        singleCountsB.append(np.random.randint(0, countingTime))\n",
     "        coincidenceCountsAB.append(np.random.randint(0, countingTime))\n",
     "        \n",
-    "'''\n",
+    "    '''\n",
     "    \n",
     "    \n",
     "    # Update the average count in the text box\n",
@@ -401,8 +420,7 @@
     "    #averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
     "    \n",
     "    \n",
-    "    # Stream the new data to the plots.\n",
-    "    source.stream(new_data)\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -418,7 +436,8 @@
     "    # if the START button is on\n",
     "    if startStopButtonGroup.active == 0:\n",
     "        \n",
-    "        # Add a periodic_callback, the callback interval is stored in the variable dt\n",
+    "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
+    "        #global countingTime\n",
     "        countingTime = countingTimeSlider.value\n",
     "        callback_id = curdoc().add_periodic_callback(update_data, countingTime)\n",
     "    \n",
@@ -438,6 +457,25 @@
     "    \n",
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
+    "    \n",
+    "\n",
+    "def change_callback_period(attr, old, new):\n",
+    "    # use global variable\n",
+    "    global callback_id\n",
+    "    \n",
+    "    # if the START button is on\n",
+    "    if startStopButtonGroup.active == 0:\n",
+    "        \n",
+    "        # Remove the periodic callback\n",
+    "        curdoc().remove_periodic_callback(callback_id)\n",
+    "        \n",
+    "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
+    "        #global countingTime\n",
+    "        countingTime = countingTimeSlider.value\n",
+    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime)\n",
+    "        \n",
+    "        \n",
+    "    \n",
     "\n",
     "    \n",
     "    \n",
@@ -447,6 +485,8 @@
     "\n",
     "# When the reset button is clicked, call the reset_plot function\n",
     "resetGraphButton.on_click(reset_plot)\n",
+    "\n",
+    "countingTimeSlider.on_change('value', change_callback_period)\n",
     "\n",
     "# Set up layouts and add to document\n",
     "\n",
